--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-    background-image: linear-gradient(to bottom, red, blue, green, blue, purple, pink, blue, red, black, red, blue, green, red);
-    color: #002200;
+    background-image: #FFFFFF;
+    color: #000000;
 }
 
-american johnny jonny onothan
+what a stupid bitch
